--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -178,7 +178,8 @@
             "charles": "A ﬁve-time Olympian and two-time Speed Skating World Champion, Charles has worked with some of the world’s biggest brands and brings a competitive edge to AllSkills. Charles not only has experience on the ice, but is also an avid gamer, which combined with his athletic background helps provides great insight in to the minds of athletes and gamers."
         },
         "partners": {
-            "soon": "Announcements coming soon"
+            "reach":"We're always open to working with exceptional talents and organizations. Reach out if you're interested in being a Partner, Ambassador, or helping us build and grow AllSkills.",
+            "buttonText": "Reach Out"
         },
         "news": {}
     }
