--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -4,7 +4,7 @@
             "title":"Built for",
             "description_start": "AllSkills is a platform that looks to bring",
             "description_highlight": "creativity, sustainable growth, and increased competition",
-            "description_end": "to the talent world. Our platform provides an opportunity to witness people of all skills showcasing their talents and competing against others all while earning money through our carefully crafted token based Vote and Challenge system and NFT marketplace."
+            "description_end": "to the talent world. Our platform provides an opportunity to witness people of all skills showcasing their talents and competing against others all while earning benefits through our carefully crafted token based Vote and Challenge system and NFT marketplace."
         },
         "table": {
             "title1":"Skills Competition",
@@ -178,7 +178,8 @@
             "charles": "A ﬁve-time Olympian and two-time Speed Skating World Champion, Charles has worked with some of the world’s biggest brands and brings a competitive edge to AllSkills. Charles not only has experience on the ice, but is also an avid gamer, which combined with his athletic background helps provides great insight in to the minds of athletes and gamers."
         },
         "partners": {
-            "soon": "Announcements coming soon"
+            "reach":"We're always open to working with exceptional talents and organizations. Reach out if you're interested in being a Partner, Ambassador, or helping us build and grow AllSkills.",
+            "buttonText": "Reach Out"
         },
         "news": {}
     }
