--- a/src/lib/translations/en/content.json
+++ b/src/lib/translations/en/content.json
@@ -6,7 +6,7 @@
         "banner_end":"Event",
         "top": "Current Round",
         "middle": "Next Round",
-        "bottom": "Previous Round"
+        "bottom": "Previous Rounds"
       },
       "hero": {
           "title":"Built for",
